--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         tools:layout_editor_absoluteY="0dp">
 
         <LinearLayout
-            android:id="@+id/conyainer"
+            android:id="@+id/subContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
@@ -49,33 +49,37 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/lblUser"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:id="@+id/lblEmailMain"
+                android:layout_width="116dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center_vertical"
                 android:paddingLeft="20px"
                 android:paddingRight="20px"
-                android:text="@string/user"
-                android:textColor="#FFF"
-                android:textSize="15sp" />
+                android:textColor="@color/colorWhite"
+                android:paddingTop="@dimen/data_screen_control_padding_top"
+                android:text="@string/email" />
 
             <EditText
-                android:id="@+id/txtUserName"
-                android:layout_width="185dp"
+                android:id="@+id/txtEmailMain"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:textColor="#FFF" />
+                android:maxLength="100"
+                android:textColor="@color/colorWhite"
+                android:inputType="textEmailAddress" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="2"
             android:orientation="horizontal">
 
@@ -88,7 +92,7 @@
                 android:paddingLeft="20px"
                 android:paddingRight="20px"
                 android:text="@string/password"
-                android:textColor="#FFF"
+                android:textColor="@color/colorWhite"
                 android:textSize="15sp" />
 
             <EditText
@@ -98,7 +102,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="textPassword"
-                android:textColor="#FFF" />
+                android:textColor="@color/colorWhite" />
 
         </LinearLayout>
 
@@ -107,6 +111,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:orientation="horizontal">
 
             <Button
@@ -134,6 +140,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="2">
+
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/login_button"
+                android:layout_width="190dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="30dp"
+                android:layout_marginLeft="10px"
+                android:layout_marginTop="10dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="2"
             android:orientation="horizontal">
 
@@ -148,13 +172,18 @@
                 android:textColor="@color/colorWhite"
                 android:text="@string/userNotRegistered"/>
 
+
         </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:orientation="horizontal"></LinearLayout>
+            android:orientation="horizontal">
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
